[build-system]
requires = [
    "pydm",
    "requests",
    "setuptools_scm[toml]>=8",
    "setuptools>=64.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "PvMail"
description = "Watch an EPICS PV. Send email when it changes from 0 to 1."
authors = [
  { name="Pete Jemian", email="jemian@anl.gov" },
  { name="Kurt Goetze", email="goetze@anl.gov" },
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["EPICS", "PV", "email", "monitor"]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/?highlight=license
license = {file = "src/PvMail/LICENSE"}
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Freely Distributable",
    "License :: Public Domain",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

# qt ==5
# pyqt ==5
dependencies = [
  "pydm",
  "pyepics",
]

[tool.setuptools_scm]

[project.urls]
"Homepage" = "https://prjemian.github.io/pvmail/"
"Source" = "https://github.com/BCDA-APS/pvmail"
"Bug Tracker" = "https://github.com/BCDA-APS/pvmail/issues"

[project.scripts]
pvMail = "PvMail.cli:main"
pvMail_mail_test = "PvMail.mailer:main"
pvMail_mail_config_file = "PvMail.ini_config:main"

[tool.black]
line_length = 88

[tool.copyright]
copyright = "Copyright (c) 2009-2024, UChicago Argonne, LLC.  See LICENSE file."

[tool.coverage.run]
concurrency = [
    "thread",
    "multiprocessing"
]
omit = [
    # omit anything under the installed packages directory
    "*/site-packages/*",
    # omit these individual files
]
relative_files = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E501"]

[tool.isort]
force_single_line = true
# multi_line_output = 1
line_length = 88
include_trailing_comma = true
